k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibeshield-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ge65poj.stud.k8s.aet.cit.tum.de
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /langchain
            pathType: Prefix
            backend:
              service:
                name: langchain-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
